# Hygieia

./: .env.example  .gitignore  Hygieia Project Portfolio.md  README.md  README1.md  ReadMe.md  app.py  chatbot_service.py  gemini_service.py  image_processing.py  ml_models.py  models.py  pyproject.toml  requirements.txt  routes.py
backend/: config.py  model_bridge.py  requirements.txt  run.py
backend/app/: __init__.py  models.py
backend/app/routes/: analysis.py  auth.py  benchmark.py  blockchain.py  chat.py  users.py
backend/app/services/: chat_service.py
backend/controllers/: breast_diagnosis.py  breast_prediction.py  diabetes_prediction.py  heart_prediction.py  skin_calibration.py  skin_diagnosis.py
backend/models/: Model_Metadata.txt  model_metadata_manager.py
backend/models/BC Diagnostic Model/: breast_diagnosis_benchmarker.py  train-breast-diagnosis.py
backend/tools/: inspect_joblib.py
database/: schema.sql
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
hash connect/: Blockchain Security & Audit Trail.md
instance/: hygieia.db
llm integration/: LLM Integration Documentation.md
models documentation/: Breast Cancer Risk Prediction Model.md  Breast Cancer Tissue Diagnosis Model.md  Diabetes Risk Prediction Model.md  Heart Risk Prediction Model.md  Skin Lesion Diagnosis Model.md
static/css/: medical.css
static/js/: main.js
templates/: 404.html  500.html  base.html  breast_cancer.html  chatbot.html  chatbot_conversation.html  dermatology.html  diabetes.html  heart_disease.html  index.html  results.html
(+48 files in other folders)
